--- a/poefree-client/index.html
+++ b/poefree-client/index.html
@@ -2,9 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/icon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="Poefree is a free platform for sharing, writing, saving, and interacting with poetry and friends. Unleash your creativity and connect with like-minded poetry lovers!"
+    />
+    <meta
+      name="keywords"
+      content="poetry, free poetry site, share poetry, write poetry, poetry community, creative writing, poetry lovers"
+    />
+    <meta name="author" content="Jayce Bordelon" />
+    <meta
+      property="og:title"
+      content="Poefree - Share, Write, Save Poetry with Friends"
+    />
+    <meta
+      property="og:description"
+      content="Join Poefree, the free platform for poetry enthusiasts to share, write, save, and interact with others in the poetry community."
+    />
+    <meta property="og:image" content="/icon.webp" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Poefree - Free Poetry Sharing Platform"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore Poefree, the free site for sharing, writing, and enjoying poetry with friends and fellow enthusiasts."
+    />
+    <meta name="twitter:image" content="/icon.webp" />
+    <title>Poefree - Share, Write, Save Poetry with Friends</title>
   </head>
   <body>
     <div id="root"></div>
