--- a/poefree-client/index.html
+++ b/poefree-client/index.html
@@ -34,7 +34,7 @@
       content="Explore Poefree, the free site for sharing, writing, and enjoying poetry with friends and fellow enthusiasts."
     />
     <meta name="twitter:image" content="/icon.webp" />
-    <title>Poefree - Share, Write, Save Poetry with Friends</title>
+    <title>Poefree</title>
   </head>
   <body>
     <div id="root"></div>
