--- a/poefree-client/index.html
+++ b/poefree-client/index.html
@@ -34,6 +34,10 @@
       content="Explore Poefree, the free site for sharing, writing, and enjoying poetry with friends and fellow enthusiasts."
     />
     <meta name="twitter:image" content="/icon.webp" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <title>Poefree</title>
   </head>
   <body>
